feat: add simple tokenizer

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,9 @@ lisp-interpreter = "lisp_interpreter:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
+    "pytest-sugar>=1.0.0",
+]
